devops-intern-task/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server-service
  labels:
    app: websocket-server
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: websocket
  selector:
    app: websocket-server
