devops-intern-task/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "websocket-server-service"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_sessionid"
spec:
  ingressClassName: nginx
  rules:
  - host: websocket.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: websocket-server-service
            port:
              number: 8080
